--- a/project.config.json
+++ b/project.config.json
@@ -9,7 +9,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "1.9.1",
-	"appid": "wx8b33c3047243f996",
+	"appid": "wx9c6a4c379f198d6f",
 	"projectname": "2048",
 	"isGameTourist": false,
 	"condition": {
